--- a/miniprojectDibimbing_react_audia/src/pages/register.css
+++ b/miniprojectDibimbing_react_audia/src/pages/register.css
@@ -9,6 +9,27 @@ body{
 
 }
 
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+    color: #09D8E2;
+}
+
+h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+    font-size: small;
+    padding-left: 10px;
+    color: #c8603d;
+}
+h4 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 200;
+    font-size: 15px;
+    padding-top: 15px;
+    text-align: center;
+}
+
 .container {
     padding-top: 150px; 
     
