--- a/miniprojectDibimbing_react_audia/src/pages/login.css
+++ b/miniprojectDibimbing_react_audia/src/pages/login.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Galada&family=Potta+One&display=swap');
-
+body {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height:111vh;
+    background: linear-gradient(135deg,  #09D8E2 50%, #21E1BC);
+}
 .title {
     font-family: "Potta One", system-ui;
     font-weight: 600;
@@ -25,6 +31,7 @@ h2 {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    
     font-family: Arial, Helvetica, sans-serif;
 }
 
