--- a/miniprojectDibimbing_react_audia/src/pages/register.css
+++ b/miniprojectDibimbing_react_audia/src/pages/register.css
@@ -1,13 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Galada&family=Potta+One&display=swap');
-body{
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
-    background: linear-gradient(135deg,  #09D8E2 50%, #21E1BC);
 
+body {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height:100vh;
+  background: linear-gradient(135deg,  #09D8E2 50%, #21E1BC);
 }
-
 h2 {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 900;
@@ -30,7 +29,12 @@ h4 {
 }
 
 .container {
-    padding-top: 150px; 
+    padding-top: 120px; 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding-bottom:120px;
+    
     
   }
   
@@ -73,7 +77,7 @@ h4 {
   
 
 .container {
-    max-width: 1000px; /* Adjust the max-width as needed */
+    max-width: 800px; /* Adjust the max-width as needed */
   }
   
   .leftColumn {
@@ -109,8 +113,8 @@ h4 {
   .leftParagraph {
     font-size: 15px;
     line-height: 1.5;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Adjust the font size as needed */
-  }
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+
   .social-login{
    
     font-style: italic;
