--- a/miniprojectDibimbing_react_audia/src/components/footer.css
+++ b/miniprojectDibimbing_react_audia/src/components/footer.css
@@ -4,7 +4,7 @@
     background: #212121;
     color: #ffffff;
     font-size: 14px;
-    height: 200px;
+    height: 170px;
 
 }
 
@@ -39,6 +39,7 @@ a {
 .modal-body{
 text-align: center;
 color: #212121;
+font-size: 26px;
 }
 
 .breadcrumb a{
