--- a/miniprojectDibimbing_react_audia/src/pages/listuser/listuser.css
+++ b/miniprojectDibimbing_react_audia/src/pages/listuser/listuser.css
@@ -1,6 +1,7 @@
 
 .listuserpage {
     background: linear-gradient(135deg,  #09D8E2 50%, #21E1BC);
+    padding-top: 100px;
 }
 .listuser {
     text-align: center;
@@ -8,7 +9,7 @@
     color:#fff;
     font-weight: bold;
     font-size: 30px;
-    margin-top: 90px;
+   
 
 }
 
@@ -26,8 +27,9 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     padding: 20px;
     transition: box-shadow 0.3s ease;
-    margin-left: 60px;
-    margin-right: 60px;
+    margin-left: 30px;
+    margin-right: 30px;
+    height: auto;
   }
   
   .card:hover {
@@ -38,17 +40,28 @@
     text-align: center;
   }
   
-  .card-img-top {
+  .image-profile {
     width: 100px;
-    height: 100px;
-    border-radius: 50%;
+    height: 50px;
+    border-radius: 50px;
     margin-bottom: 10px;
   }
 
-  .btn{
+  .btn2{
     border-radius: 20px;
-    box-shadow: #727672 0 0 0px;
-    background-color: #21E1BC;
+    background: linear-gradient(to right, #09D8E2 50%, #21E1BC); 
+    border-color: #09D8E2;
+    color: #fff;
+    font-weight: bold;
+    font-size: 12px;
+    height: 30px;
+   
+   
+  }
+
+  .btn2:hover {
+    background-color: #919393;
+    color: #fff;
   }
   
   .button-container {
