--- a/miniprojectDibimbing_react_audia/src/pages/login/login.css
+++ b/miniprojectDibimbing_react_audia/src/pages/login/login.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Galada&family=Potta+One&display=swap');
-body {
+.loginpage {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height:111vh;
+    height:85vh;
     background: linear-gradient(135deg,  #09D8E2 50%, #21E1BC);
 }
 .title {
@@ -30,8 +30,9 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    
+    height: 90vh;
+    padding-left: 50px;
+    padding-right: 50px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
