--- a/miniprojectDibimbing_react_audia/src/pages/home/home.css
+++ b/miniprojectDibimbing_react_audia/src/pages/home/home.css
@@ -29,14 +29,20 @@ h1 {
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+    overflow: hidden;
 }
 
 .card img {
     width: 100%;
     height: 300px;
     object-fit: cover; 
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-top-left-radius: 35px;
+    border-top-right-radius: 35px;
+    transition: transform 0.3s ease;
+}
+
+.card:hover img {
+    transform: scale(1.1);
 }
 
 .card-body {
@@ -47,3 +53,4 @@ h1 {
     font-size: 20px;
     font-weight: bold;
 }
+
